# pointing-sim

./: .gitmodules  Cargo.toml  README.md
src/: data.rs  main.rs  subscriber.rs  target_interpolator.rs
src/gui/: camera_view.rs  draw_buffer.rs  mod.rs
src/resources/shaders/: 3d_view.vert  pass-through.vert  solid_color.frag  surface.frag  texturing.frag  texturing_multi-sample.frag
src/runner/: clipboard_support.rs  mod.rs
src/workers/: mod.rs  mount_model.rs  mount_server.rs  target_receiver.rs  target_source.rs
