[package]
name = "pointing-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
clipboard = "0.5.0"
glium = { version = "0.32.1", default-features = true }
imgui = { version = "0.11.0", features = ["docking"] }
imgui-glium-renderer = { version = "0.11.0", features = [] }
imgui-winit-support = { version = "0.11.0" }
# Why do we have to do this? If not specified, 0.27.5 is picked, which causes an error (x11/wayland not specified).
# Even though imgui-winit-support 0.11.0 has winit 0.27.2 listed in its dependencies.
winit = "0.27.2"
