[package]
name = "pointing-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
chrono = "0.4.12"
clipboard = "0.5.0"
crossbeam = "0.8.3"
glium = { version = "0.34.0", default-features = false, features = ["glutin_backend"] }
glutin = "0.31.1"
glutin-winit = "0.4.2"
imgui = { version = "0.12.0", features = ["docking"] }
imgui-glium-renderer = { version = "0.12.0", default-features = true }
imgui-winit-support = { version = "0.12.0" }
log = "0.4.20"
pointing-utils = { path = "ext/pointing-utils" }
raw-window-handle = "0.5.0"
simplelog = "0.12.1"
subscriber-rs = { path = "ext/subscriber-rs" }
time = "0.3.30" # why needed explicitly? simplelog's use not enough?
winit = { version = "0.29.3", features = ["rwh_05"] }
